--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "swooletw/hyperf-event",
+    "name": "laravel-hyperf/event",
     "type": "library",
     "description": "The event package for Laravel Hyperf.",
     "license": "MIT",
@@ -18,12 +18,12 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/swooletw/hyperf-packages/issues",
-        "source": "https://github.com/swooletw/hyperf-packages"
+        "issues": "https://github.com/laravel-hyperf/components/issues",
+        "source": "https://github.com/laravel-hyperf/components"
     },
     "autoload": {
         "psr-4": {
-            "SwooleTW\\Hyperf\\Event\\": "src/",
+            "LaravelHyperf\\Event\\": "src/",
             "Illuminate\\Events\\": "illuminate/"
         },
         "files": [
@@ -36,18 +36,18 @@
         "hyperf/collection": "~3.1.0",
         "hyperf/context": "~3.1.0",
         "hyperf/stringable": "~3.1.0",
-        "swooletw/hyperf-bus": "~0.1",
+        "laravel-hyperf/bus": "~0.1",
         "laravel/serializable-closure": "^1.3"
     },
     "suggest": {
-        "swooletw/hyperf-queue": "Required to use queueable listener. (~0.1.0)"
+        "laravel-hyperf/queue": "Required to use queueable listener. (~0.1.0)"
     },
     "config": {
         "sort-packages": true
     },
     "extra": {
         "hyperf": {
-            "config": "SwooleTW\\Hyperf\\Event\\ConfigProvider"
+            "config": "LaravelHyperf\\Event\\ConfigProvider"
         },
         "branch-alias": {
             "dev-main": "0.1-dev"
