--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,11 @@
     },
     "require": {
         "php": "^8.2",
-        "hyperf/event": "~3.1.0",
-        "hyperf/collection": "~3.1.0",
-        "hyperf/context": "~3.1.0",
-        "hyperf/stringable": "~3.1.0",
-        "hypervel/bus": "~0.1",
+        "hyperf/event": "3.2.x-dev",
+        "hyperf/collection": "3.2.x-dev",
+        "hyperf/context": "3.2.x-dev",
+        "hyperf/stringable": "3.2.x-dev",
+        "hypervel/bus": "dev-edge-hyperf3.2",
         "laravel/serializable-closure": "^1.3"
     },
     "suggest": {
@@ -51,5 +51,11 @@
         "branch-alias": {
             "dev-main": "0.1-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "github",
+            "url": "https://github.com/kingIZZZY/bus"
+        }
+    ]
 }
